--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.3
   font_awesome_flutter: ^10.4.0
   smooth_page_indicator: ^1.0.1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
