--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   smooth_page_indicator: ^1.0.1
   google_nav_bar: ^5.0.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
