--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   smooth_page_indicator: ^1.0.1
   google_nav_bar: ^5.0.6
   provider: ^6.0.5
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+  firebase_crashlytics: ^3.1.2
+  firebase_performance: ^0.9.1+1
 
 dev_dependencies:
   flutter_test:
