--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.4.2
   firebase_crashlytics: ^3.1.2
   firebase_performance: ^0.9.1+1
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
