--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_crashlytics: ^3.1.2
   firebase_performance: ^0.9.1+1
   google_sign_in: ^6.1.0
+  realm: ^1.2.0
 
 dev_dependencies:
   flutter_test:
